Test code for new ble sender format

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,8 +23,6 @@ build_flags =
 	-D BAUD=${common_env_data.monitor_speed}
 	-D USE_LITTLEFS=true
 lib_deps =
-	#https://github.com/mp-se/Arduino-Log#1.1.2
-	#https://github.com/mp-se/ArduinoJson#v6.21.3
 	https://github.com/mp-se/NimBLE-Arduino#1.4.1
 
 [env:ble]
@@ -41,12 +39,12 @@ build_flags =
 	-D CORE_DEBUG_LEVEL=2
 	-D ESP32C3
 	-D ARDUINO_ESP32C3_DEV
-	#-DUSE_SERIAL_PINS # Use the TX/RX pins for the serial port
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
-#board = lolin_c3_mini 
-board = wemos_d1_mini32
+board = lolin_c3_mini 
+#board = wemos_d1_mini32
+#board = lolin_s3_mini 
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
