Added c3/s3 as separate targets, enable ble dbg

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ build_flags =
 lib_deps =
 	https://github.com/mp-se/NimBLE-Arduino#1.4.1
 
-[env:ble]
+[env:ble-c3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
 upload_speed = ${common_env_data.upload_speed}
@@ -37,14 +37,38 @@ build_flags =
 	${common_env_data.build_flags}
 	-D LOG_LEVEL=4
 	-D CORE_DEBUG_LEVEL=2
-	-D ESP32C3
-	-D ARDUINO_ESP32C3_DEV
+	-D ARDUINO_USB_CDC_ON_BOOT
+	-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
+	-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
 board = lolin_c3_mini 
-#board = wemos_d1_mini32
-#board = lolin_s3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
+
+[env:ble-s3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	-Wl,-Map,output.map
+	${common_env_data.build_flags}
+	-D LOG_LEVEL=4
+	-D CORE_DEBUG_LEVEL=2
+	#-D ESP32C3
+	#-D ARDUINO_ESP32C3_DEV
+	-D ARDUINO_USB_CDC_ON_BOOT
+	-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
+	-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_s3_mini 
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
