Updated targets for clients and servers

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,12 +22,17 @@ build_flags =
 	-Wl,-Map,output.map
 	-D BAUD=${common_env_data.monitor_speed}
 	-D USE_LITTLEFS=true
+	-D LOG_LEVEL=4
+	-D CORE_DEBUG_LEVEL=2
+	-D ARDUINO_USB_CDC_ON_BOOT
+	#-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
+	#-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
 lib_deps =
 	https://github.com/mp-se/NimBLE-Arduino#1.4.1
 	https://github.com/mp-se/Arduino-Log#1.1.2
 	https://github.com/mp-se/ArduinoJson#v6.21.3
 
-[env:ble-c3]
+[env:tilt-c3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
 upload_speed = ${common_env_data.upload_speed}
@@ -35,13 +40,8 @@ monitor_speed = ${common_env_data.monitor_speed}
 build_unflags = 
 	${common_env_data.build_unflags}
 build_flags = 
-	-Wl,-Map,output.map
 	${common_env_data.build_flags}
-	-D LOG_LEVEL=4
-	-D CORE_DEBUG_LEVEL=2
-	-D ARDUINO_USB_CDC_ON_BOOT
-	-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
-	-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
+	-D SERVER_TILT
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
@@ -50,7 +50,7 @@ build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
 
-[env:ble-s3]
+[env:server-c3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
 upload_speed = ${common_env_data.upload_speed}
@@ -58,13 +58,44 @@ monitor_speed = ${common_env_data.monitor_speed}
 build_unflags = 
 	${common_env_data.build_unflags}
 build_flags = 
-	-Wl,-Map,output.map
 	${common_env_data.build_flags}
-	-D LOG_LEVEL=4
-	-D CORE_DEBUG_LEVEL=2
-	-D ARDUINO_USB_CDC_ON_BOOT
-	-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
-	-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
+	-D SERVER_GRAVITYMON
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_c3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
+
+[env:server-s3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D SERVER_GRAVITYMON
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_s3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
+
+[env:client-s3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D CLIENT
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
