--- a/platformio.ini
+++ b/platformio.ini
@@ -25,8 +25,8 @@ build_flags =
 	-D LOG_LEVEL=4
 	-D CORE_DEBUG_LEVEL=2
 	-D ARDUINO_USB_CDC_ON_BOOT
-	#-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
-	#-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
+	-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
+	-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
 lib_deps =
 	https://github.com/mp-se/NimBLE-Arduino#1.4.1
 	https://github.com/mp-se/Arduino-Log#1.1.2
@@ -42,6 +42,7 @@ build_unflags =
 build_flags = 
 	${common_env_data.build_flags}
 	-D SERVER_TILT
+	#-D CONFIG_BT_NIMBLE_EXT_ADV=1
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
@@ -60,6 +61,7 @@ build_unflags =
 build_flags = 
 	${common_env_data.build_flags}
 	-D SERVER_GRAVITYMON
+	-D CONFIG_BT_NIMBLE_EXT_ADV=1
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
