Updated project targets to cover the main options.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,15 +25,14 @@ build_flags =
 	-D LOG_LEVEL=4
 	-D CORE_DEBUG_LEVEL=2
 	-D ARDUINO_USB_CDC_ON_BOOT
-	-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
-	-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
-	#-D CONFIG_BT_NIMBLE_EXT_ADV=1
+	#-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
+	#-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
 lib_deps =
 	https://github.com/mp-se/NimBLE-Arduino#1.4.1
 	https://github.com/mp-se/Arduino-Log#1.1.2
 	https://github.com/mp-se/ArduinoJson#v6.21.3
 
-[env:tilt-c3]
+[env:server-tilt-c3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
 upload_speed = ${common_env_data.upload_speed}
@@ -50,8 +49,29 @@ board = lolin_c3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
+#upload_port=COM10
 
-[env:server-c3]
+[env:server-tilt-ext-c3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D SERVER_TILT
+	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_c3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
+#upload_port=COM10
+
+[env:server-gravmon-c3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
 upload_speed = ${common_env_data.upload_speed}
@@ -68,8 +88,9 @@ board = lolin_c3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
+#upload_port=COM10
 
-[env:server-s3]
+[env:server-gravmon-ext-c3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
 upload_speed = ${common_env_data.upload_speed}
@@ -79,13 +100,35 @@ build_unflags =
 build_flags = 
 	${common_env_data.build_flags}
 	-D SERVER_GRAVITYMON
+	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
-board = lolin_s3_mini 
+board = lolin_c3_mini 
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
+#upload_port=COM10
+
+[env:server-gravmon-adv-c3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D SERVER_GRAVITYMON_EXT
+	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_c3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
+#upload_port=COM10
 
 [env:client-s3]
 framework = ${common_env_data.framework}
@@ -97,6 +140,7 @@ build_unflags =
 build_flags = 
 	${common_env_data.build_flags}
 	-D CLIENT
+	-D ACTIVE_SCAN
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
@@ -104,3 +148,4 @@ board = lolin_s3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
+#upload_port=COM15
