Adding EddyStone beacon format

--- a/platformio.ini
+++ b/platformio.ini
@@ -51,6 +51,44 @@ board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
 #upload_port=COM10
 
+[env:server-tiltpro-c3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D SERVER_TILT_PRO
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_c3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
+#upload_port=COM10
+
+[env:server-eddy-c3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D SERVER_EDDY
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_c3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
+#upload_port=COM10
+
 [env:server-tilt-ext-c3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
@@ -130,7 +168,7 @@ board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
 #upload_port=COM10
 
-[env:client-s3]
+[env:client-active-s3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
 upload_speed = ${common_env_data.upload_speed}
@@ -141,6 +179,25 @@ build_flags =
 	${common_env_data.build_flags}
 	-D CLIENT
 	-D ACTIVE_SCAN
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_s3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
+#upload_port=COM15
+
+[env:client-passive-s3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D CLIENT
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
