Added precommit and tested all options

--- a/platformio.ini
+++ b/platformio.ini
@@ -49,7 +49,7 @@ board = lolin_c3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
-#upload_port=COM10
+#upload_port=COM8
 
 [env:server-tiltpro-c3]
 framework = ${common_env_data.framework}
@@ -68,7 +68,7 @@ board = lolin_c3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
-#upload_port=COM10
+#upload_port=COM8
 
 [env:server-eddy-c3]
 framework = ${common_env_data.framework}
@@ -87,7 +87,7 @@ board = lolin_c3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
-#upload_port=COM10
+#upload_port=COM8
 
 [env:server-tilt-ext-c3]
 framework = ${common_env_data.framework}
@@ -107,7 +107,7 @@ board = lolin_c3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
-#upload_port=COM10
+#upload_port=COM8
 
 [env:server-gravmon-c3]
 framework = ${common_env_data.framework}
@@ -126,7 +126,7 @@ board = lolin_c3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
-#upload_port=COM10
+#upload_port=COM8
 
 [env:server-gravmon-ext-c3]
 framework = ${common_env_data.framework}
@@ -146,7 +146,7 @@ board = lolin_c3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
-#upload_port=COM10
+#upload_port=COM8
 
 [env:server-gravmon-adv-c3]
 framework = ${common_env_data.framework}
@@ -166,7 +166,7 @@ board = lolin_c3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
-#upload_port=COM10
+#upload_port=COM8
 
 [env:client-active-s3]
 framework = ${common_env_data.framework}
@@ -179,6 +179,7 @@ build_flags =
 	${common_env_data.build_flags}
 	-D CLIENT
 	-D ACTIVE_SCAN
+	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
@@ -198,6 +199,7 @@ build_unflags =
 build_flags = 
 	${common_env_data.build_flags}
 	-D CLIENT
+	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
