Added custom iBeacon

--- a/platformio.ini
+++ b/platformio.ini
@@ -70,6 +70,25 @@ board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
 #upload_port=COM8
 
+[env:server-custom-c3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D SERVER_CUSTOM
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_c3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
+#upload_port=COM8
+
 [env:server-eddy-c3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
