Update bluetooth test bench and test all formats

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ include_dir = lib
 [common_env_data]
 upload_speed = 921600
 monitor_speed =  115200
-platform= espressif32 @ 6.4.0
+platform= espressif32 @ 6.10.0
 framework = arduino
 build_unflags = 
 build_flags = 
@@ -24,15 +24,19 @@ build_flags =
 	-D USE_LITTLEFS=true
 	-D LOG_LEVEL=4
 	-D CORE_DEBUG_LEVEL=2
-	-D ARDUINO_USB_CDC_ON_BOOT
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D ESP32S3=1
+	-D ENABLE_BLE=1
 	#-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
 	#-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
 lib_deps =
-	https://github.com/mp-se/NimBLE-Arduino#1.4.1
-	https://github.com/mp-se/Arduino-Log#1.1.2
-	https://github.com/mp-se/ArduinoJson#v6.21.3
+	; https://github.com/mp-se/NimBLE-Arduino#1.4.1
+	; https://github.com/mp-se/Arduino-Log#1.1.2
+	; https://github.com/mp-se/ArduinoJson#v6.21.3
+    https://github.com/bblanchon/ArduinoJson#v7.3.0
+	https://github.com/h2zero/NimBLE-Arduino#2.2.1
 
-[env:server-tilt-c3]
+[env:client-s3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
 upload_speed = ${common_env_data.upload_speed}
@@ -41,163 +45,7 @@ build_unflags =
 	${common_env_data.build_unflags}
 build_flags = 
 	${common_env_data.build_flags}
-	-D SERVER_TILT
-lib_deps = 
-	${common_env_data.lib_deps}
-lib_ignore = 
-board = lolin_c3_mini 
-build_type = release
-board_build.partitions = part32.csv
-board_build.filesystem = littlefs 
-#upload_port=COM8
-
-[env:server-tiltpro-c3]
-framework = ${common_env_data.framework}
-platform = ${common_env_data.platform}
-upload_speed = ${common_env_data.upload_speed}
-monitor_speed = ${common_env_data.monitor_speed}
-build_unflags = 
-	${common_env_data.build_unflags}
-build_flags = 
-	${common_env_data.build_flags}
-	-D SERVER_TILT_PRO
-lib_deps = 
-	${common_env_data.lib_deps}
-lib_ignore = 
-board = lolin_c3_mini 
-build_type = release
-board_build.partitions = part32.csv
-board_build.filesystem = littlefs 
-#upload_port=COM8
-
-[env:server-custom-c3]
-framework = ${common_env_data.framework}
-platform = ${common_env_data.platform}
-upload_speed = ${common_env_data.upload_speed}
-monitor_speed = ${common_env_data.monitor_speed}
-build_unflags = 
-	${common_env_data.build_unflags}
-build_flags = 
-	${common_env_data.build_flags}
-	-D SERVER_CUSTOM
-lib_deps = 
-	${common_env_data.lib_deps}
-lib_ignore = 
-board = lolin_c3_mini 
-build_type = release
-board_build.partitions = part32.csv
-board_build.filesystem = littlefs 
-#upload_port=COM8
-
-[env:server-eddy-c3]
-framework = ${common_env_data.framework}
-platform = ${common_env_data.platform}
-upload_speed = ${common_env_data.upload_speed}
-monitor_speed = ${common_env_data.monitor_speed}
-build_unflags = 
-	${common_env_data.build_unflags}
-build_flags = 
-	${common_env_data.build_flags}
-	-D SERVER_EDDY
-lib_deps = 
-	${common_env_data.lib_deps}
-lib_ignore = 
-board = lolin_c3_mini 
-build_type = release
-board_build.partitions = part32.csv
-board_build.filesystem = littlefs 
-#upload_port=COM8
-
-[env:server-tilt-ext-c3]
-framework = ${common_env_data.framework}
-platform = ${common_env_data.platform}
-upload_speed = ${common_env_data.upload_speed}
-monitor_speed = ${common_env_data.monitor_speed}
-build_unflags = 
-	${common_env_data.build_unflags}
-build_flags = 
-	${common_env_data.build_flags}
-	-D SERVER_TILT
-	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
-lib_deps = 
-	${common_env_data.lib_deps}
-lib_ignore = 
-board = lolin_c3_mini 
-build_type = release
-board_build.partitions = part32.csv
-board_build.filesystem = littlefs 
-#upload_port=COM8
-
-[env:server-gravmon-c3]
-framework = ${common_env_data.framework}
-platform = ${common_env_data.platform}
-upload_speed = ${common_env_data.upload_speed}
-monitor_speed = ${common_env_data.monitor_speed}
-build_unflags = 
-	${common_env_data.build_unflags}
-build_flags = 
-	${common_env_data.build_flags}
-	-D SERVER_GRAVITYMON
-lib_deps = 
-	${common_env_data.lib_deps}
-lib_ignore = 
-board = lolin_c3_mini 
-build_type = release
-board_build.partitions = part32.csv
-board_build.filesystem = littlefs 
-#upload_port=COM8
-
-[env:server-gravmon-ext-c3]
-framework = ${common_env_data.framework}
-platform = ${common_env_data.platform}
-upload_speed = ${common_env_data.upload_speed}
-monitor_speed = ${common_env_data.monitor_speed}
-build_unflags = 
-	${common_env_data.build_unflags}
-build_flags = 
-	${common_env_data.build_flags}
-	-D SERVER_GRAVITYMON
-	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
-lib_deps = 
-	${common_env_data.lib_deps}
-lib_ignore = 
-board = lolin_c3_mini 
-build_type = release
-board_build.partitions = part32.csv
-board_build.filesystem = littlefs 
-#upload_port=COM8
-
-[env:server-gravmon-adv-c3]
-framework = ${common_env_data.framework}
-platform = ${common_env_data.platform}
-upload_speed = ${common_env_data.upload_speed}
-monitor_speed = ${common_env_data.monitor_speed}
-build_unflags = 
-	${common_env_data.build_unflags}
-build_flags = 
-	${common_env_data.build_flags}
-	-D SERVER_GRAVITYMON_EXT
-	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
-lib_deps = 
-	${common_env_data.lib_deps}
-lib_ignore = 
-board = lolin_c3_mini 
-build_type = release
-board_build.partitions = part32.csv
-board_build.filesystem = littlefs 
-#upload_port=COM8
-
-[env:client-active-s3]
-framework = ${common_env_data.framework}
-platform = ${common_env_data.platform}
-upload_speed = ${common_env_data.upload_speed}
-monitor_speed = ${common_env_data.monitor_speed}
-build_unflags = 
-	${common_env_data.build_unflags}
-build_flags = 
-	${common_env_data.build_flags}
-	-D CLIENT
-	-D ACTIVE_SCAN
+	-D GATEWAY=1
 	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
 lib_deps = 
 	${common_env_data.lib_deps}
@@ -206,9 +54,8 @@ board = lolin_s3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
-#upload_port=COM15
 
-[env:client-passive-s3]
+[env:server-gravitymon-s3]
 framework = ${common_env_data.framework}
 platform = ${common_env_data.platform}
 upload_speed = ${common_env_data.upload_speed}
@@ -217,8 +64,7 @@ build_unflags =
 	${common_env_data.build_unflags}
 build_flags = 
 	${common_env_data.build_flags}
-	-D CLIENT
-	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
+	-D GRAVITYMON=1
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
@@ -226,4 +72,21 @@ board = lolin_s3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
-#upload_port=COM15
+
+[env:server-pressuremon-s3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D PRESSUREMON=1
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_s3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
