--- a/platformio.ini
+++ b/platformio.ini
@@ -90,3 +90,21 @@ board = lolin_s3_mini
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
+
+[env:server-chamber-s3]
+framework = ${common_env_data.framework}
+platform = ${common_env_data.platform}
+upload_speed = ${common_env_data.upload_speed}
+monitor_speed = ${common_env_data.monitor_speed}
+build_unflags = 
+	${common_env_data.build_unflags}
+build_flags = 
+	${common_env_data.build_flags}
+	-D CHAMBER=1
+lib_deps = 
+	${common_env_data.lib_deps}
+lib_ignore = 
+board = lolin_s3_mini 
+build_type = release
+board_build.partitions = part32.csv
+board_build.filesystem = littlefs 
