--- a/platformio.ini
+++ b/platformio.ini
@@ -27,14 +27,15 @@ build_flags =
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D ESP32S3=1
 	-D ENABLE_BLE=1
-	#-D CONFIG_BT_NIMBLE_LOG_LEVEL=5
-	#-D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
+	; -D CONFIG_BT_NIMBLE_LOG_LEVEL=5
+	; -D CONFIG_NIMBLE_CPP_LOG_LEVEL=5
 lib_deps =
 	; https://github.com/mp-se/NimBLE-Arduino#1.4.1
 	; https://github.com/mp-se/Arduino-Log#1.1.2
 	; https://github.com/mp-se/ArduinoJson#v6.21.3
     https://github.com/bblanchon/ArduinoJson#v7.3.0
 	https://github.com/h2zero/NimBLE-Arduino#2.2.1
+	; https://github.com/h2zero/NimBLE-Arduino#2.1.3
 
 [env:client-s3]
 framework = ${common_env_data.framework}
@@ -46,11 +47,12 @@ build_unflags =
 build_flags = 
 	${common_env_data.build_flags}
 	-D GATEWAY=1
-	-D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
+	; -D CONFIG_BT_NIMBLE_EXT_ADV=1 # Enable BLE5 extended advertising in the library
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
-board = lolin_s3_mini 
+; board = lolin_s3_mini 
+board = lolin_s3_pro 
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
