--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ include_dir = lib
 
 [common_env_data]
 upload_speed = 921600
-monitor_speed =  115200
+monitor_speed =  57600
 platform= espressif32 @ 6.11.0
 framework = arduino
 build_unflags = 
@@ -22,7 +22,7 @@ build_flags =
 	-Wl,-Map,output.map
 	-D BAUD=${common_env_data.monitor_speed}
 	-D USE_LITTLEFS=true
-	-D LOG_LEVEL=4
+	-D LOG_LEVEL=5
 	-D CORE_DEBUG_LEVEL=2
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D ESP32S3=1
@@ -51,8 +51,8 @@ build_flags =
 lib_deps = 
 	${common_env_data.lib_deps}
 lib_ignore = 
-; board = lolin_s3_mini 
-board = lolin_s3_pro 
+board = lolin_s3_mini 
+; board = lolin_s3_pro 
 build_type = release
 board_build.partitions = part32.csv
 board_build.filesystem = littlefs 
